--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 
 header{
   background-color: #ccc;
-  position: absolute;
+  position: fixed;
   z-index: 91;
   width: 75%;
   left: 25%;
@@ -21,8 +21,22 @@ header{
   display: flex;
 }
 
+.icon i {
+  font-size: 50px;
+  margin: 0 10px;
+}
+
+.small{
+  font-size: 11px;
+}
+
+.options{
+  font-size: 25px;
+  margin-right: 1%;
+}
+
 .contacts_header{
-  position: absolute;
+  position: fixed;
   display: flex;
   width: 25%;
   z-index: 90;
@@ -35,7 +49,7 @@ header{
   background-image: url(../img/whatsapp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 492px;
+  height: 91vh;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -56,6 +70,7 @@ header{
   align-items: flex-start;
   justify-content: space-around;
   flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .u_sender .txt{
@@ -63,6 +78,7 @@ header{
 
 .u_sender .sendDate{
   align-self: flex-end;
+  margin-right: 2%;
 }
 
 .receive{
@@ -84,12 +100,16 @@ header{
   height: 50px;
   z-index: 99;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+}
+.chat_bar i{
+  font-size: 25px;
+  margin: 0 1%;
 }
 
 .inp{
-  width: 55%;
+  width: 90%;
   border-radius: 10px;
   height: 40px;
 }
