--- a/style/style.css
+++ b/style/style.css
@@ -49,12 +49,13 @@ header{
   background-image: url(../img/whatsapp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 91vh;
-  width: 100%;
+  height: 100vh;
+  width: 75%;
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
   align-items: flex-end;
+  float: right;
 
 }
 
