--- a/style/style.css
+++ b/style/style.css
@@ -45,18 +45,23 @@ header{
   float: left;
 }
 
-.main{
+#test{
   background-image: url(../img/whatsapp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
-  width: 75%;
+  height: 100%;
+  overflow: hidden;
+
+}
+
+.main{
+  width: 100%;
   display: flex;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   flex-direction: column;
   align-items: flex-end;
   float: right;
-
+  overflow-y: scroll;
 }
 
 .u_sender{
