--- a/style/style.css
+++ b/style/style.css
@@ -47,21 +47,23 @@ header{
 
 #test{
   background-image: url(../img/whatsapp.jpg);
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
-  height: 100%;
-  overflow: hidden;
-
+  height: 100vh;
+  overflow: auto;
 }
 
 .main{
   width: 100%;
+  padding: 4% 0;
   display: flex;
   /* justify-content: flex-end; */
   flex-direction: column;
   align-items: flex-end;
   float: right;
-  overflow-y: scroll;
+  overflow-y: auto;
+  height: 100%;
+  z-index: 99;
 }
 
 .u_sender{
