--- a/style/style.css
+++ b/style/style.css
@@ -174,7 +174,7 @@ align-items: center;
   display: none;
 }
 
-.u_sender i{
+.u_sender i, .receive i{
   float: right;
   cursor: pointer;
 }
@@ -182,13 +182,15 @@ align-items: center;
 .dropCont{
   position: absolute;
   width: 150px;
-  top:50%;
+  top:22px;
+  right: 0;
   background-color: white;
   box-shadow: 5px 10px 18px #888888;
   border-radius: 8px;
 }
 
-.dropCont li{
+
+.dropCont li, .dropContR li{
   padding: 2px;
 }
 .red{
@@ -213,6 +215,7 @@ align-items: center;
 }
 
 .receive{
+  position: relative;
   background-color: white;
   min-width: 10%;
   max-width: 16%;
@@ -221,9 +224,9 @@ align-items: center;
   margin-left: 10%;
   margin-top: 25px;
   margin-bottom: 1%;
+  padding: 4px;
   float: left;
   clear: both;
-
 }
 
 .receive .txt{
