--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,7 @@ header{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 70px;
 }
 
 .icon{
@@ -120,6 +121,7 @@ align-items: center;
 }
 
 .contacts_list{
+  cursor: pointer;
   width: 100%;
   height: 60px;
   background-color: #ccc;
@@ -128,7 +130,7 @@ align-items: center;
   align-items: center;
 }
 
-#test{
+#chat{
   background-image: url(../img/whatsapp.jpg);
   background-repeat: repeat;
   background-size: cover;
@@ -140,6 +142,7 @@ align-items: center;
 }
 
 .main{
+  display: none;
   width: 100%;
   /* display: flex; */
   /* justify-content: flex-end; */
@@ -149,6 +152,19 @@ align-items: center;
   overflow-y: auto;
   height: 100%;
 }
+
+.active{
+  display: block;
+}
+
+.activebg{
+  background-color: lightgreen;
+}
+
+.hide{
+  display: none;
+}
+
 
 .u_sender{
   background-color: green;
@@ -170,9 +186,6 @@ align-items: center;
   position: relative;
 }
 
-.hide{
-  display: none;
-}
 
 .u_sender i, .receive i{
   float: right;
